--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <i>The binoculars are sharp. Inside the small circular frame, her naked body appears. Her chin lifts slowly in rhythm with her arm. Her ribcage expands and contracts.</i><br>
 <br>
 <br>
-<i>The <b>HEAT</b> on her skin.</i><br>
+<i>The <b>heat</b> on her skin.</i><br>
 <br>
 <br>
 <i>The owner of the dark eyes smiles. She holds her breath. Fingers adjust the focus. The field of view expands endlessly. In an instant, the distance between the two buildings collapses to nothing,</i><br>
@@ -824,6 +824,7 @@ checkOrientation();
 </script>
 </body>
 </html>
+
 
 
 
